--- a/MechanicShopAPI/appsettings.json
+++ b/MechanicShopAPI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=mechanicshop;Username=postgres;Password=postgres"
+  },
+  "JwtSettings": {
+    "SecretKey": "THIS_IS_A_TEMPORARY_SECRET_KEY_REPLACE_IN_PRODUCTION_WITH_MINIMUM_32_CHARACTERS",
+    "Issuer": "MechanicShopAPI",
+    "Audience": "MechanicShopClient",
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7
   }
 }
