implemented a comprehensive tenant onboarding flow with a post-signup wizard, slug management, availability rules, and public booking pages

--- a/MechanicShopAPI/appsettings.json
+++ b/MechanicShopAPI/appsettings.json
@@ -15,5 +15,8 @@
     "Audience": "MechanicShopClient",
     "AccessTokenExpirationMinutes": 15,
     "RefreshTokenExpirationDays": 7
+  },
+  "AppSettings": {
+    "BaseUrl": "http://localhost:5000"
   }
 }
