--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,15 +110,26 @@ jobs:
           cd frontend
           npm test
         if: hashFiles('frontend/playwright.config.ts') != ''
-        continue-on-error: true  # Don't fail if tests not set up yet
+        env:
+          CI: true
 
       - name: Upload test results
-        if: failure()
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-results
-          path: frontend/test-results/
+          path: |
+            frontend/test-results/
+            frontend/playwright-report/
           retention-days: 7
+
+      - name: Upload Playwright Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: frontend/playwright-report/
+          retention-days: 30
 
   # Build check (runs on all changes)
   build-check:
